for ciklusra módosít

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <header>Táblázat</header>
+        <header>Családtagok neve: </header>
         <article>
             <table class="adatok">
                 <thead>
